--- a/index.html
+++ b/index.html
@@ -10,10 +10,17 @@
       integrity="sha512-YHuwZabI2zi0k7c9vtg8dK/63QB0hLvD4thw44dFo/TfBFVVQOqEG9WpviaEpbyvgOIYLXF1n7xDUfU3GDs0sw=="
       crossorigin="anonymous"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./main.css" />
   </head>
   <body>
     <div class="container">
       <h1>Innova</h1>
     </div>
+
+    <script src="./app.js"></script>
   </body>
 </html>
