New team section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
               $('.navbar-collapse').toggleClass("collapse");
           });
       });
-
     </script>
   </head>
   <body id="page-top">
@@ -47,27 +46,67 @@
       <div class="navbar-collapse">
         <ul class="navbar-nav align-items-center">
           <a href="#page-top"><i class="icon fab fa-pushed"></i></a>
-          <li><a href="#" class="navItem">About Us</a></li>
-          <li><a href="#" class="navItem">Our Team</a></li>
-          <li><a href="#" class="navItem">Innovation Camps</a></li>
-          <li><a href="#" class="navItem">Contact Us</a></li>
+          <li class="nav-link"><a href="#" class="navItem">About Us</a></li>
+          <li class="nav-link"><a href="#ourTeam" class="navItem">Our Team</a></li>
+          <li class="nav-link"><a href="#" class="navItem">Innovation Camps</a></li>
+          <li class="nav-link"><a href="#" class="navItem">Contact Us</a></li>
         </ul>
     </div>
     </nav>
     <!-- Navbar end -->
 
     <!-- Our team -->
+    <div id="ourTeam"></div>
     <section>
-      <div class="container" style="background-color: blue; height: 300px;" >
-        <div class="row" style="background-color: red; height: 300px;">
-          <div class="col-sm-6" style="background-color: green; height: 300px;"></div>
-          <div class="col-sm-6" style="background-color: yellow; height: 300px;"></div>
+      <h1 class="sectionHeader text-center">Meet our team</h1>
+      <hr>
+      <!-- Houcine Ncib -->
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 team-member d-flex">
+            <div class="center-img col-sm-6">
+            <img class="rounded img-fluid" src="img/person1.jpg">
+            </div>
+            <div>
+              <h2 class="teamHeader">Manager</h2>
+              <h2 class="teamName">Houcine Ncib</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia perspiciatis voluptas quae, atque ipsa corrupti laudantium magni omnis reiciendis accusamus provident harum velit autem odit eligendi consequatur fugit. Libero, officiis saepe praesentium aperiam voluptates tempora officia, accusantium neque quibusdam iusto dolores distinctio voluptatem deserunt quae possimus.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Luis Villasmil -->
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 team-member d-flex">
+            <div class="center-img col-sm-6">
+            <img class="rounded img-fluid" src="img/person2.jpg">
+            </div>
+            <div>
+              <h2 class="teamHeader">Designer</h2>
+              <h2 class="teamName">Luis Villasmil</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia perspiciatis voluptas quae, atque ipsa corrupti laudantium magni omnis reiciendis accusamus provident harum velit autem odit eligendi consequatur fugit. Libero, officiis saepe praesentium aperiam voluptates tempora officia, accusantium neque quibusdam iusto dolores distinctio voluptatem deserunt quae possimus.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Etty Fidele -->
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 team-member d-flex">
+            <div class="center-img col-sm-6">
+            <img class="rounded img-fluid" src="img/person3.jpg">
+            </div>
+            <div>
+              <h2 class="teamHeader">Developer</h2>
+              <h2 class="teamName">Etty Fidele</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia perspiciatis voluptas quae, atque ipsa corrupti laudantium magni omnis reiciendis accusamus provident harum velit autem odit eligendi consequatur fugit. Libero, officiis saepe praesentium aperiam voluptates tempora officia, accusantium neque quibusdam iusto dolores distinctio voluptatem deserunt quae possimus.</p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
     <!-- Our team end -->
-
-    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium nihil corrupti provident consectetur, omnis, blanditiis harum, dicta officiis enim magnam maxime expedita impedit quisquam libero ratione est obcaecati aliquid doloribus error dolores nesciunt! Harum quaerat aperiam iure voluptate eligendi veritatis quis ratione adipisci saepe incidunt optio mollitia beatae fugit, voluptates hic et eos provident minima. Neque quasi eos, quo modi doloremque cum ab obcaecati quos quod molestias. Officiis doloribus et nobis blanditiis, in, corporis similique quasi vel ut natus, omnis harum suscipit aut tempore? Magnam aspernatur voluptatibus obcaecati accusantium similique? Placeat doloribus consectetur doloremque fugit. Sed, magni neque! Sed expedita necessitatibus iste eveniet aut. Expedita necessitatibus deleniti optio. Praesentium ut eveniet sunt provident unde velit obcaecati atque nihil enim excepturi eaque, nostrum laborum quae aliquid? Eveniet nihil corrupti eos commodi ea nulla impedit accusamus. Dignissimos quos, provident laboriosam rerum blanditiis mollitia vel, nihil deserunt facere laudantium itaque. Assumenda ipsam odio est voluptatibus dolor quod doloribus! Rem nobis adipisci officiis, porro numquam totam cum est? Natus fugiat ullam aperiam. Unde quod commodi earum doloribus laboriosam odio eum animi iste quo? Eos porro ab corrupti, ipsa, qui voluptatum quia magnam in perspiciatis, maxime a rem voluptatibus. Qui ullam animi cumque, dignissimos non magni, temporibus totam ipsum ipsa voluptatum quibusdam voluptate ab sapiente delectus tempora, quia quae et voluptatibus libero enim odio doloribus? Quod reiciendis ex voluptatibus, numquam, nisi quas tenetur commodi temporibus, iure maiores natus ea veniam eius rerum qui delectus deserunt earum quidem ut perferendis. Itaque, fugit dolorum adipisci nam molestiae aut eum consequatur dolore, eveniet inventore nobis accusamus neque labore quam? Facilis dolor repellendus vel nemo, dolorem, voluptatum voluptates, mollitia molestias fuga laborum quasi cum. Ad est eius consequuntur commodi nihil dolore a? Dolore unde architecto saepe perspiciatis rem blanditiis officiis maiores dicta temporibus et nostrum, laborum natus assumenda nesciunt sunt accusantium voluptatem modi placeat! Quidem dolorum quaerat aperiam necessitatibus similique sint voluptates, eveniet et laudantium voluptatem illo sequi! Excepturi et sequi sunt odio magnam error praesentium itaque saepe vel veritatis velit alias rerum facere ut inventore repudiandae maxime molestiae quos quia cumque, blanditiis recusandae delectus eius voluptatibus? Maxime magni necessitatibus, reiciendis quos perferendis a voluptates cum veniam voluptas ipsa! Nam libero unde iusto minima animi eum neque explicabo dignissimos, eos tempora, perferendis omnis commodi? Nobis sequi doloribus sed nihil optio debitis. Nesciunt architecto sequi, ex reprehenderit exercitationem voluptatum. Libero dolore dolorem eum adipisci ullam autem provident laborum placeat laboriosam, a aperiam nihil assumenda repellat facere sapiente eaque, nostrum ut ipsa nesciunt maiores harum ducimus culpa mollitia! Atque fugit, magnam qui aliquam distinctio molestias? Sapiente harum a, consectetur nam minima tempore eligendi necessitatibus ipsum modi, placeat laboriosam sed rerum quo omnis ex? Nostrum natus dolor omnis, atque numquam quis quaerat delectus quod enim aut corrupti inventore sapiente est voluptatibus reiciendis expedita eaque? Fugiat quos natus iure, nobis culpa distinctio autem, voluptates molestiae ipsa atque, obcaecati architecto temporibus inventore quasi. Cum corrupti excepturi ex voluptates rerum possimus nulla. Repudiandae dolorem eos similique impedit exercitationem. Perspiciatis sit exercitationem, saepe porro facilis enim accusantium? Asperiores, cum rem quis blanditiis sunt dignissimos aliquam at eveniet excepturi veniam fuga consequuntur repellat veritatis maiores hic voluptatum numquam deleniti maxime, autem voluptas mollitia vel aut ea! Eum commodi veritatis dolorum vel porro quisquam ea? Esse culpa iure veniam incidunt mollitia ut asperiores officiis optio amet, quidem earum sunt deleniti magni cupiditate illo fugiat ullam ipsa, nostrum alias? Iste id aspernatur, quis, exercitationem enim ipsum quo maiores libero quas dicta mollitia dolor alias incidunt iusto atque, voluptatibus modi ea corrupti laudantium sunt? Neque explicabo optio quae, praesentium vero vel blanditiis consectetur voluptatem? Iusto amet eligendi adipisci impedit iure!</h1>
 
     <script src="./app.js"></script>
   </body>
