--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <!-- Meta -->
+    <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google" content="notranslate"/>
+
+    <!-- Title -->
     <title>Inova | Prosphering innovation</title>
+
+    <!-- Stylesheets -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css"
@@ -20,20 +26,10 @@
       integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./main.css" />
 
-    <!-- Responsive Navbar -->
-    <script
-      src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"
-      type="text/javascript"
-    ></script>
-    <script>
-      $(document).ready(function () {
-        $('.toggle-collapse').click(function () {
-          $('.navbar-collapse').toggleClass('collapse');
-        });
-      });
-    </script>
+    <!-- Custom stylesheet -->
+    <link rel="stylesheet" href="./main.css" />
+    
   </head>
   <body id="page-top">
     <!-- Intro -->
