--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <!-- Meta -->
-    <meta charset="UTF-8"/>
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="google" content="notranslate"/>
+    <meta name="google" content="notranslate" />
 
     <!-- Title -->
     <title>Inova | Prosphering innovation</title>
@@ -29,7 +29,6 @@
 
     <!-- Custom stylesheet -->
     <link rel="stylesheet" href="./main.css" />
-    
   </head>
   <body id="page-top">
     <!-- Intro -->
@@ -57,13 +56,28 @@
 
     <!--About us -->
     <section class="container about-us mt-5" id="about-us">
-      <h2 class="font-weight-medium">About us</h2>
-      <h3 class="mt-4 font-weight-medium">World leader in frugal innovation</h3>
-      <p class="mt-1">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate, aut. Delectus, quos
-        corrupti accusantium excepturi at animi distinctio laborum quidem!
-        <br />Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, incidunt?
-      </p>
+      <h2 class="sectionHeader text-center">About us</h2>
+      <hr />
+      <div class="row">
+        <div class="col-sm-6 p-3">
+          <h3 class="mt-4 font-weight-medium">World leader in frugal innovation</h3>
+          <p class="mt-1">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate, aut. Delectus,
+            quos corrupti accusantium excepturi at animi distinctio laborum quidem!
+            <br />Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, incidunt?
+          </p>
+        </div>
+        <div class="col-sm-6 p-3">
+          <h3 class="mt-4 font-weight-medium">Hosting the world's innovation camps</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus praesentium
+            ducimus maiores excepturi eveniet nihil ea qui? Expedita, adipisci recusandae.
+            <br />
+          </p>
+          <span class="font-weight-medium mt-1"> The lastest of which is on Oct 27. </span>
+          <button class="button button-primary small ml-2">Join us</button>
+        </div>
+      </div>
     </section>
     <!--About us end -->
 
