Fix merge conflicts

--- a/index.html
+++ b/index.html
@@ -29,10 +29,6 @@
 
     <!-- Custom stylesheet -->
     <link rel="stylesheet" href="./main.css" />
-<<<<<<< HEAD
-
-=======
->>>>>>> 16526f56fae25f2f67666bade3c270d7ae01c2e5
   </head>
   <body id="page-top">
     <!-- Intro -->
@@ -89,7 +85,7 @@
     <!-- Our team -->
     <section id="our-team">
       <h1 class="sectionHeader text-center">Meet our team</h1>
-      <hr/>
+      <hr />
       <!-- Houcine Ncib -->
       <div class="container">
         <div class="row">
@@ -160,39 +156,63 @@
     <section id="contact-us">
       <div class="container">
         <h1 class="sectionHeader text-center">Let's work together!</h1>
-        <hr/>
-        <p class="text-center contact-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <hr />
+        <p class="text-center contact-text">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+        </p>
         <div class="row contact-row">
-
           <div class="col-sm-6">
             <label class="label-text" for="fname">Your first name *</label>
-            <input type="text" name="name" class="inputEl" placeholder="Please enter your first name ..." required>
+            <input
+              type="text"
+              name="name"
+              class="inputEl"
+              placeholder="Please enter your first name ..."
+              required
+            />
           </div>
 
           <div class="col-sm-6">
             <label class="labelText" for="fname">Your last name *</label>
-            <input type="text" name="name" class="inputEl" placeholder="Please enter your last name ..." required>
+            <input
+              type="text"
+              name="name"
+              class="inputEl"
+              placeholder="Please enter your last name ..."
+              required
+            />
           </div>
 
           <div class="col-sm-6">
             <label class="labelText" for="fname">Subject *</label>
-            <input type="text" name="subject" class="inputEl" placeholder="Subject ..." required>
+            <input type="text" name="subject" class="inputEl" placeholder="Subject ..." required />
           </div>
 
           <div class="col-sm-12">
             <label class="labelText" for="fname">Your email adress *</label>
-            <input type="text" name="email" class="inputEl" placeholder="Please enter your email adress ..." required>
+            <input
+              type="text"
+              name="email"
+              class="inputEl"
+              placeholder="Please enter your email adress ..."
+              required
+            />
           </div>
 
           <div class="col-sm-12">
             <label class="labelText" for="fname">Your message for us *</label>
-            <textarea name="message" class="inputEl" placeholder="Your message for us ..." row="4" required></textarea>
+            <textarea
+              name="message"
+              class="inputEl"
+              placeholder="Your message for us ..."
+              row="4"
+              required
+            ></textarea>
           </div>
 
           <div class="col-xs-12 pt-3 pb-3">
             <center><a href="#" class="button button-primary">Submit</a></center>
           </div>
-
         </div>
       </div>
     </section>
