--- a/index.html
+++ b/index.html
@@ -29,10 +29,6 @@
 
     <!-- Custom stylesheet -->
     <link rel="stylesheet" href="./main.css" />
-<<<<<<< HEAD
-
-=======
->>>>>>> 16526f56fae25f2f67666bade3c270d7ae01c2e5
   </head>
   <body id="page-top">
     <!-- Intro -->
@@ -95,12 +91,12 @@
         <div class="row">
           <div class="col-sm-12 team-member d-flex">
             <div class="center-img col-sm-6">
-              <img class="rounded img-fluid" src="img/person1.jpg" />
+              <img class="rounded img-fluid fade fadeOut" src="img/person1.jpg" />
             </div>
             <div>
-              <h2 class="teamHeader">Manager</h2>
-              <h2 class="teamName">Houcine Ncib</h2>
-              <p>
+              <h2 class="teamHeader fade fadeOut">Manager</h2>
+              <h2 class="teamName fade fadeOut">Houcine Ncib</h2>
+              <p class="fade fadeOut">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia perspiciatis
                 voluptas quae, atque ipsa corrupti laudantium magni omnis reiciendis accusamus
                 provident harum velit autem odit eligendi consequatur fugit. Libero, officiis saepe
@@ -116,12 +112,12 @@
         <div class="row">
           <div class="col-sm-12 team-member d-flex">
             <div class="center-img col-sm-6">
-              <img class="rounded img-fluid" src="img/person2.jpg" />
+              <img class="rounded img-fluid fade fadeOut" src="img/person2.jpg" />
             </div>
             <div>
-              <h2 class="teamHeader">Designer</h2>
-              <h2 class="teamName">Luis Villasmil</h2>
-              <p>
+              <h2 class="teamHeader fade fadeOut">Designer</h2>
+              <h2 class="teamName fade fadeOut">Luis Villasmil</h2>
+              <p class="fade fadeOut">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia perspiciatis
                 voluptas quae, atque ipsa corrupti laudantium magni omnis reiciendis accusamus
                 provident harum velit autem odit eligendi consequatur fugit. Libero, officiis saepe
@@ -137,12 +133,12 @@
         <div class="row">
           <div class="col-sm-12 team-member d-flex">
             <div class="center-img col-sm-6">
-              <img class="rounded img-fluid" src="img/person3.jpg" />
+              <img class="rounded img-fluid fade fadeOut" src="img/person3.jpg" />
             </div>
             <div>
-              <h2 class="teamHeader">Developer</h2>
-              <h2 class="teamName">Etty Fidele</h2>
-              <p>
+              <h2 class="teamHeader fade fadeOut">Developer</h2>
+              <h2 class="teamName fade fadeOut">Etty Fidele</h2>
+              <p class="fade fadeOut">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia perspiciatis
                 voluptas quae, atque ipsa corrupti laudantium magni omnis reiciendis accusamus
                 provident harum velit autem odit eligendi consequatur fugit. Libero, officiis saepe
@@ -156,6 +152,12 @@
     </section>
     <!-- Our team end -->
 
+    <!-- Innobvation camps -->
+    <section id="innovation-camps">
+      
+    </section>
+    <!-- Innobvation camps end -->
+
     <!-- Contact us -->
     <section id="contact-us">
       <div class="container">
@@ -164,22 +166,22 @@
         <p class="text-center contact-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
         <div class="row contact-row">
 
-          <div class="col-sm-6">
+          <div class="col-sm-12 col-md-6">
             <label class="label-text" for="fname">Your first name *</label>
             <input type="text" name="name" class="inputEl" placeholder="Please enter your first name ..." required>
           </div>
 
-          <div class="col-sm-6">
+          <div class="col-sm-12 col-md-6">
             <label class="labelText" for="fname">Your last name *</label>
             <input type="text" name="name" class="inputEl" placeholder="Please enter your last name ..." required>
           </div>
 
-          <div class="col-sm-6">
+          <div class="col-sm-12 col-md-6">
             <label class="labelText" for="fname">Subject *</label>
             <input type="text" name="subject" class="inputEl" placeholder="Subject ..." required>
           </div>
 
-          <div class="col-sm-12">
+          <div class="col-sm-12 col-md-6">
             <label class="labelText" for="fname">Your email adress *</label>
             <input type="text" name="email" class="inputEl" placeholder="Please enter your email adress ..." required>
           </div>
@@ -189,8 +191,8 @@
             <textarea name="message" class="inputEl" placeholder="Your message for us ..." row="4" required></textarea>
           </div>
 
-          <div class="col-xs-12 pt-3 pb-3">
-            <center><a href="#" class="button button-primary">Submit</a></center>
+          <div class="col-xs-12 pt-3 pb-3 text-center">
+            <a href="#" class="button button-primary">Submit</a>
           </div>
 
         </div>
