--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
     </nav>
     <!-- Navbar end -->
 
+    <!-- Hero -->
+    <div class="hero"></div>
+    <!-- Hero end -->
+
     <!--About us -->
     <section class="container about-us mt-5" id="about-us">
       <h2 class="sectionHeader text-center">About us</h2>
