--- a/index.html
+++ b/index.html
@@ -56,7 +56,19 @@
     <!-- Navbar end -->
 
     <!-- Hero -->
-    <div class="hero"></div>
+    <!-- <div class="hero">
+      <div class="hero-brand">
+        <div class="hero-fade"></div>
+        <img
+          src="https://images.unsplash.com/photo-1505373877841-8d25f7d46678?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1600&q=80"
+          alt=""
+        />
+        <div class="hero-text">
+          <h1 class="hero-title">Lorem ipsum dolor sit amet.</h1>
+          <h2 class="hero-subtitle">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h2>
+        </div>
+      </div>
+    </div> -->
     <!-- Hero end -->
 
     <!--About us -->
