--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <!-- Navbar end -->
 
     <!-- Hero -->
-    <!-- <div class="hero">
+    <div class="hero">
       <div class="hero-brand">
         <div class="hero-fade"></div>
         <img
@@ -68,7 +68,7 @@
           <h2 class="hero-subtitle">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h2>
         </div>
       </div>
-    </div> -->
+    </div>
     <!-- Hero end -->
 
     <!--About us -->
