Improve innovation camps

--- a/index.html
+++ b/index.html
@@ -174,7 +174,12 @@
     <!-- Our team end -->
 
     <!-- Innobvation camps -->
-    <section id="innovation-camps"></section>
+    <section id="innovation-camps">
+      <div class="container">
+        <div class="sectionHeader text-center">Innovation camps</div>
+        <hr />
+      </div>
+    </section>
     <!-- Innobvation camps end -->
 
     <!-- Contact us -->
