--- a/index.html
+++ b/index.html
@@ -179,6 +179,57 @@
       <div class="container">
         <div class="sectionHeader text-center">Innovation camps</div>
         <hr />
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="card fade fadeOut">
+              <div
+                class="card-header"
+                style="
+                  background-image: url('https://www.oslomet.no/var/oslomet/storage/images/5/2/0/5/205025-1-eng-GB/Kjeller_berekraft.jpg');
+                "
+              ></div>
+              <div class="card-content">
+                <p>Oct 27th.</p>
+                <h2>Camp OsloMet</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, culpa.</p>
+                <div>
+                  <button class="button button-primary">Join camp</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="card fade fadeOut delay-1">
+              <div
+                class="card-header"
+                style="
+                  background-image: url('https://images.unsplash.com/photo-1555725305-e823b44548de?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1952&q=80');
+                "
+              ></div>
+              <div class="card-content">
+                <p>December 6th.</p>
+                <h2>Camp Trondheim</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, culpa.</p>
+                <div>
+                  <button class="button button-primary">Join camp</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="card fade fadeOut delay-2">
+              <div class="card-header"></div>
+              <div class="card-content">
+                <p>March 24th.</p>
+                <h2>Camp Oslo</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, culpa.</p>
+                <div>
+                  <button class="button button-primary">Join camp</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     <!-- Innobvation camps end -->
