--- a/index.html
+++ b/index.html
@@ -62,15 +62,12 @@
         <div class="hero-fade"></div>
         <img
           src="https://images.unsplash.com/photo-1505373877841-8d25f7d46678?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1600&q=80"
-          alt=""
-        />
+          alt=""/>
         <div class="hero-text">
           <h1 class="hero-title">Channel your inner entrepreneur.</h1>
           <div class="row d-flex align-items-center">
             <div class="hero-subtitle">Join us at Oct 27th.</div>
-            <a href="#innovation-camps" role="button" class="button button-primary small ml-2"
-              >Join us</a
-            >
+            <a href="#innovation-camps" role="button" class="button button-primary small ml-2">Join us</a>
           </div>
         </div>
       </div>
@@ -84,7 +81,7 @@
       <div class="row">
         <div class="col-sm-6 p-3  fade fadeOut">
           <h3 class="mt-4 font-weight-medium">World leader in frugal innovation</h3>
-          <p class="mt-1 fade fadeOut">
+          <p class="mt-1">
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate, aut. Delectus,
             quos corrupti accusantium excepturi at animi distinctio laborum quidem!
             <br />Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, incidunt?
@@ -92,7 +89,7 @@
         </div>
         <div class="col-sm-6 p-3  fade fadeOut">
           <h3 class="mt-4 font-weight-medium">Hosting the world's innovation camps</h3>
-          <p class="fade fadeOut">
+          <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus praesentium
             ducimus maiores excepturi eveniet nihil ea qui? Expedita, adipisci recusandae.
             <br />
