--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
     <!-- Contact us end -->
 
     <!-- Footer -->
-    <section class="footer" id="footer">
+    <footer class="footer" id="footer">
       <div class="container">
         <div class="row">
           <!-- Newsletter -->
@@ -287,7 +287,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </footer>
     <!-- Footer end-->
 
     <!-- All rights reserved -->
