--- a/index.html
+++ b/index.html
@@ -62,12 +62,15 @@
         <div class="hero-fade"></div>
         <img
           src="https://images.unsplash.com/photo-1505373877841-8d25f7d46678?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1600&q=80"
-          alt=""/>
+          alt=""
+        />
         <div class="hero-text">
           <h1 class="hero-title">Channel your inner entrepreneur.</h1>
           <div class="row d-flex align-items-center">
             <div class="hero-subtitle">Join us at Oct 27th.</div>
-            <a href="#innovation-camps" role="button" class="button button-primary small ml-2">Join us</a>
+            <a href="#innovation-camps" role="button" class="button button-primary small ml-2"
+              >Join us</a
+            >
           </div>
         </div>
       </div>
@@ -176,7 +179,7 @@
       <div class="container">
         <div class="sectionHeader text-center">Innovation camps</div>
         <hr />
-        <div class="row">
+        <div class="row justify-content-center">
           <div class="col-sm-4">
             <div class="card fade fadeOut">
               <div
