--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <!-- Meta -->
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="google" content="notranslate" />
 
     <!-- Title -->
@@ -34,23 +34,23 @@
     <!-- Intro -->
     <h4 class="introHeader text-center">
       Next Innovation Camp: Join us on Oct 27.
-      <a href="#innovation-camps" class="button button-primary small ml-2">Register</a>
+      <a role="button" href="#innovation-camps" class="button button-primary small ml-2">Register</a>
     </h4>
     <!-- Intro end -->
 
     <!-- Navbar -->
     <nav class="navbar">
-      <button class="toggle-collapse">
+      <button role="button" class="toggle-collapse">
         <i class="fa fa-bars"></i>
       </button>
-      <a href="#page-top"><i class="icon mobile-icon fab fa-pushed"></i></a>
+      <a role="button" href="#page-top"><i class="icon mobile-icon fab fa-pushed"></i></a>
       <div class="navbar-collapse">
         <ul class="navbar-nav align-items-center">
-          <a href="#page-top"><i class="icon fab fa-pushed"></i></a>
-          <li class="nav-link"><a href="#about-us" class="navItem">About Us</a></li>
-          <li class="nav-link"><a href="#our-team" class="navItem">Our Team</a></li>
-          <li class="nav-link"><a href="#innovation-camps" class="navItem">Innovation Camps</a></li>
-          <li class="nav-link"><a href="#contact-us" class="navItem">Contact Us</a></li>
+          <a role="button" href="#page-top"><i class="icon fab fa-pushed"></i></a>
+          <li class="nav-link"><a title="Go to about us" href="#about-us" class="navItem">About Us</a></li>
+          <li class="nav-link"><a title="Go to our team" href="#our-team" class="navItem">Our Team</a></li>
+          <li class="nav-link"><a title="Go to innovation camps" href="#innovation-camps" class="navItem">Innovation Camps</a></li>
+          <li class="nav-link"><a title="Go to contact us" href="#contact-us" class="navItem">Contact Us</a></li>
         </ul>
       </div>
     </nav>
@@ -62,19 +62,20 @@
         <div class="hero-fade"></div>
         <img
           src="https://images.unsplash.com/photo-1505373877841-8d25f7d46678?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1600&q=80"
-          alt=""/>
+          alt="Innovation camps"/>
         <div class="hero-text">
           <h1 class="hero-title">Channel your inner entrepreneur.</h1>
           <div class="row d-flex align-items-center">
             <div class="hero-subtitle">Join us at Oct 27th.</div>
-            <a href="#innovation-camps" role="button" class="button button-primary small ml-2">Join us</a>
+            <a role="button" href="#innovation-camps" role="button" class="button button-primary small ml-2">Join us</a>
           </div>
         </div>
       </div>
     </div>
     <!-- Hero end -->
 
-    <!--About us -->
+    <main>
+      <!--About us -->
     <section class="container about-us mt-5" id="about-us">
       <h2 class="sectionHeader text-center">About us</h2>
       <hr />
@@ -95,7 +96,7 @@
             <br />
           </p>
           <span class="font-weight-medium mt-1"> The lastest of which is on Oct 27. </span>
-          <button class="button button-primary small ml-2">Join us</button>
+          <button role="button" class="button button-primary small ml-2">Join us</button>
         </div>
       </div>
     </section>
@@ -110,7 +111,7 @@
         <div class="row">
           <div class="col-sm-12 team-member d-flex">
             <div class="center-img col-sm-6">
-              <img class="rounded img-fluid fade fadeOut" src="img/person1.jpg" />
+              <img alt="Picture of manager" class="rounded img-fluid fade fadeOut" src="img/person1.jpg" />
             </div>
             <div class="fade fadeOut">
               <h2 class="teamHeader">Manager</h2>
@@ -131,7 +132,7 @@
         <div class="row">
           <div class="col-sm-12 team-member d-flex">
             <div class="center-img col-sm-6">
-              <img class="rounded img-fluid fade fadeOut" src="img/person2.jpg" />
+              <img alt="Picture of Designer" class="rounded img-fluid fade fadeOut" src="img/person2.jpg" />
             </div>
             <div class="fade fadeOut">
               <h2 class="teamHeader">Designer</h2>
@@ -152,7 +153,7 @@
         <div class="row">
           <div class="col-sm-12 team-member d-flex">
             <div class="center-img col-sm-6">
-              <img class="rounded img-fluid fade fadeOut" src="img/person3.jpg" />
+              <img alt="Picture of Developer" class="rounded img-fluid fade fadeOut" src="img/person3.jpg" />
             </div>
             <div class="fade fadeOut">
               <h2 class="teamHeader">Developer</h2>
@@ -190,7 +191,7 @@
                 <h2>Camp OsloMet</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, culpa.</p>
                 <div>
-                  <button class="button button-primary">Join camp</button>
+                  <button role="button" class="button button-primary">Join camp</button>
                 </div>
               </div>
             </div>
@@ -208,7 +209,7 @@
                 <h2>Camp Trondheim</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, culpa.</p>
                 <div>
-                  <button class="button button-primary">Join camp</button>
+                  <button role="button" class="button button-primary">Join camp</button>
                 </div>
               </div>
             </div>
@@ -221,7 +222,7 @@
                 <h2>Camp Oslo</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, culpa.</p>
                 <div>
-                  <button class="button button-primary">Join camp</button>
+                  <button role="button" class="button button-primary">Join camp</button>
                 </div>
               </div>
             </div>
@@ -240,35 +241,35 @@
           Lorem, ipsum dolor sit amet consectetur adipisicing elit.
         </p>
         <div class="row contact-row">
-          <div class="col-sm-12 col-md-6">
+          <div class="col-xs-12 col-md-6">
             <label class="label-text" for="fname">Your first name *</label>
             <input
               type="text"
-              name="name"
+              name="fname"
               class="inputEl"
               placeholder="Please enter your first name ..."
               required
             />
           </div>
 
-          <div class="col-sm-12 col-md-6">
-            <label class="labelText" for="fname">Your last name *</label>
+          <div class="col-xs-12 col-md-6">
+            <label class="labelText" for="lname">Your last name *</label>
             <input
               type="text"
-              name="name"
+              name="lname"
               class="inputEl"
               placeholder="Please enter your last name ..."
               required
             />
           </div>
 
-          <div class="col-sm-12 col-md-6">
-            <label class="labelText" for="fname">Subject *</label>
+          <div class="col-xs-12 col-md-6">
+            <label class="labelText" for="subject">Subject *</label>
             <input type="text" name="subject" class="inputEl" placeholder="Subject ..." required />
           </div>
 
-          <div class="col-sm-12 col-md-6">
-            <label class="labelText" for="fname">Your email adress *</label>
+          <div class="col-xs-12 col-md-6">
+            <label class="labelText" for="email">Your email adress *</label>
             <input
               type="text"
               name="email"
@@ -278,8 +279,8 @@
             />
           </div>
 
-          <div class="col-sm-12">
-            <label class="labelText" for="fname">Your message for us *</label>
+          <div class="col-xs-12">
+            <label class="labelText" for="message">Your message for us *</label>
             <textarea
               name="message"
               class="inputEl"
@@ -290,12 +291,13 @@
           </div>
 
           <div class="col-xs-12 pt-3 pb-3 text-center">
-            <a href="#" class="button button-primary">Submit</a>
+            <a role="button" href="#" class="button button-primary">Submit</a>
           </div>
         </div>
       </div>
     </section>
     <!-- Contact us end -->
+    </main>
 
     <!-- Footer -->
     <footer class="footer" id="footer">
@@ -307,7 +309,7 @@
             <p class="text-center">Join over 10.500 people who recieve weekly web marketing tips</p>
             <center>
               <input placeholder="Your email adress..." class="footer-input" />
-              <button class="footer-btn button button-primary small">Submit</button>
+              <button role="button" class="footer-btn button button-primary small">Submit</button>
             </center>
           </div>
           <!-- Get in touch -->
@@ -332,16 +334,16 @@
           <div class="footer-flex footer-item">
             <h3 class="text-center footer-header">Stay connected</h3>
             <p class="social">
-              <a href="https://www.linkedin.com" target="_blank" class="linkedin"
+              <a title="Go to linkedin" href="https://www.linkedin.com" target="_blank" class="linkedin"
                 ><i class="fab fa-linkedin"></i
               ></a>
-              <a href="https://www.facebook.com" target="_blank" class="facebook"
+              <a title="Go to facebook" href="https://www.facebook.com" target="_blank" class="facebook"
                 ><i class="fab fa-facebook"></i
               ></a>
-              <a href="https://www.instagram.com/" target="_blank" class="instagram"
+              <a title="Go to instagram" href="https://www.instagram.com/" target="_blank" class="instagram"
                 ><i class="fab fa-instagram"></i
               ></a>
-              <a href="https://www.youtube.com" target="_blank" class="youtube"
+              <a title="Go to youtube" href="https://www.youtube.com" target="_blank" class="youtube"
                 ><i class="fab fa-youtube"></i
               ></a>
             </p>
