--- a/index.html
+++ b/index.html
@@ -182,12 +182,12 @@
               <div
                 class="card-header"
                 style="
-                  background-image: url('https://www.oslomet.no/var/oslomet/storage/images/5/2/0/5/205025-1-eng-GB/Kjeller_berekraft.jpg');
+                  background-image: url('https://www.uib.no/sites/w3.uib.no/files/styles/wide_thumbnail/public/media/universitetsmuseet_museplassen3_0_1.jpg?itok=vXtY7C-W');
                 "
               ></div>
               <div class="card-content">
                 <p>Oct 27th.</p>
-                <h2>Camp OsloMet</h2>
+                <h2>Camp Bergen</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, culpa.</p>
                 <div>
                   <button role="button" class="button button-primary">Join camp</button>
