--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
     <!-- Intro -->
     <h4 class="introHeader text-center">
       Next Innovation Camp: Join us on Oct 27.
-      <a role="button" href="#innovation-camps" class="button button-primary small ml-2">Register</a>
+      <div class="start-btn">
+        <a role="button" href="#innovation-camps" class="button button-primary small ml-2">Register</a>
+      </div>
     </h4>
     <!-- Intro end -->
 
