--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
       <div class="navbar-collapse">
         <ul class="navbar-nav align-items-center">
           <a role="button" href="#page-top"><i class="icon fab fa-pushed"></i></a>
-          <li class="nav-link"><a title="Go to about us" href="#about-us" class="navItem">About Us</a></li>
-          <li class="nav-link"><a title="Go to our team" href="#our-team" class="navItem">Our Team</a></li>
-          <li class="nav-link"><a title="Go to innovation camps" href="#innovation-camps" class="navItem">Innovation Camps</a></li>
-          <li class="nav-link"><a title="Go to contact us" href="#contact-us" class="navItem">Contact Us</a></li>
+          <li class="nav-link"><a title="Go to about us" href="#about-us" class="nav-item">About Us</a></li>
+          <li class="nav-link"><a title="Go to our team" href="#our-team" class="nav-item">Our Team</a></li>
+          <li class="nav-link"><a title="Go to innovation camps" href="#innovation-camps" class="nav-item">Innovation Camps</a></li>
+          <li class="nav-link"><a title="Go to contact us" href="#contact-us" class="nav-item">Contact Us</a></li>
         </ul>
       </div>
     </nav>
@@ -246,8 +246,8 @@
             <label class="label-text" for="fname">Your first name *</label>
             <input
               type="text"
-              name="fname"
-              class="inputEl"
+              id="fname"
+              class="input-el"
               placeholder="Please enter your first name ..."
               required
             />
@@ -257,8 +257,8 @@
             <label class="labelText" for="lname">Your last name *</label>
             <input
               type="text"
-              name="lname"
-              class="inputEl"
+              id="lname"
+              class="input-el"
               placeholder="Please enter your last name ..."
               required
             />
@@ -266,15 +266,15 @@
 
           <div class="col-xs-12 col-md-6">
             <label class="labelText" for="subject">Subject *</label>
-            <input type="text" name="subject" class="inputEl" placeholder="Subject ..." required />
+            <input type="text" id="subject" class="input-el" placeholder="Subject ..." required />
           </div>
 
           <div class="col-xs-12 col-md-6">
             <label class="labelText" for="email">Your email adress *</label>
             <input
               type="text"
-              name="email"
-              class="inputEl"
+              id="email"
+              class="input-el"
               placeholder="Please enter your email adress ..."
               required
             />
@@ -283,8 +283,8 @@
           <div class="col-xs-12">
             <label class="labelText" for="message">Your message for us *</label>
             <textarea
-              name="message"
-              class="inputEl"
+              id="message"
+              class="input-el"
               placeholder="Your message for us ..."
               row="4"
               required
